--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,9 @@ language: cpp
 os:
 - linux
 - osx
-script: make
+before_script:
+  - git submodule init
+  - git submodule update
+script:
+  - make test
 
